# company-viewer

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml
.github/workflows/: build-windows.yml
frontend/: .gitignore  README.md  app.py  companies.json  db.py  import_json.py  pyproject.toml
frontend/.github/workflows/: build-windows.yml
init/: 01_schema.sql  02_indexes.sql
src/: lib.rs  main.rs  models.rs
src/config/: llm.rs
src/models/: api.rs  company.rs  financial.rs  mod.rs
src/parser/: mod.rs  ollama.rs  pdf.rs  section.rs
src/processor/: batch.rs
