[package]
name = "company-pdf-viewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "company_pdf_viewer"
path = "src/lib.rs"

[[bin]]
name = "process-pdfs"
path = "src/main.rs"

[dependencies]
# Core dependencies
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }

# PDF processing
pdf-extract = "0.10.0"

# HTTP client for Ollama
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }

# JSON Schema
schemars = "0.8"

dotenvy = "0.15"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"

